2010-04-23  Alan McGovern  <amcgovern@novell.com>

	* textblock.h: The correct default value really does seem to
	  be 'Left' as opposed to 'Center'. The only place using
	  'Center' is TextAlignmentProperty.GetMetadata (typeof
	  (Paragraph)).DefaultValue. If you use typeof (Block) you get
	  'Left' aswell.

2010-04-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* glyphs.cpp: Render: if we have no fill, just return. Fixes a crash in
	#Graphics.ModifyVisualTree.

2010-04-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-mp4.cpp: Zero-initialize the streams array. Fixes a crash in #1005.

2010-04-21  Jackson Harper  <jackson@ximian.com>

	* playlist.cpp:
	* asxparser.cpp|h: Raise and handle a new error for unquoted
	attributes.

2010-04-21  Jackson Harper  <jackson@ximian.com>

	* asxparser.cpp: If we already have an error, return that one
	before checking for remaining elements on the stack.

2010-04-21  Jackson Harper  <jackson@ximian.com>

	* asxparser.cpp: Raise an error if we have elements on the stack at
	the end of the stream (ie unclosed elements).

2010-04-21  Jackson Harper  <jackson@ximian.com>

	* playlist.cpp: Make sure we stop the parser on error.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* textblock.h: Add another missing default value.

2010-04-21  Jackson Harper  <jackson@ximian.com>

	* playlist.cpp: Fix typo so we allocate the correct amount of
	memory here.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* deployment.h: Add in some more missing default values.

2010-04-21  Alan McGovern  <amcgovern@novell.com>

	* brush.h:
	* viewbox.h:
	* textblock.h:
	* textblock.cpp: Add in some missing default values.

2010-04-20  Alan McGovern  <amcgovern@novell.com>

	* brush.h:
	* enums.h:
	* src.mdp:
	* glyphs.h:
	* enums.cpp:
	* textbox.h:
	* printing.h:
	* Makefile.am:
	* uielement.h:
	* textblock.h:
	* deployment.h:
	* inputscope.h:
	* usercontrol.h: Add new types and DPs so that the SL4